package pb;

import "businessCommon.proto";

option java_package = "com.google.protobuf.implementation";
option java_outer_classname = "BusinessActionProtos";

enum BusinessActionType
{
    NotDefinedAction    = 0;
    CameraOutput        = 1;    // set camera output signal
    Bookmark            = 2;    // mark part of camera archive as undeleted
    CameraRecording     = 3;    // start camera recording
    PanicRecording      = 4;    // activate panic recording mode
    SendMail            = 5;    // send mail from the EC
    Diagnostics         = 6;    // write a record to the server's log
    ShowPopup           = 7;    // show popup on the client
    CameraOutputInstant = 8;    // same as Camera Output but has not toggle state
    PlaySound           = 9;    // play sound on the client
    SayText             = 10;   // say text on the client
    PlaySoundRepeated   = 11;   // play sound until the event stops
}

message BusinessAction {
    optional BusinessActionType actionType = 1;
    repeated int32 actionResource          = 2;
    optional string actionParams           = 3;
    optional int32 businessRuleId          = 4;
    optional string runtimeParams          = 5;
    optional ToggleStateType toggleState   = 6;
    optional int32 aggregationCount        = 7;
}

message BusinessActionList {
    repeated BusinessAction businessAction = 1;
}
