package pb;

option java_package = "com.google.protobuf.implementation";
option java_outer_classname = "KvPairProtos";

message KvPair {
    required int32 resourceId = 1;
    required string name      = 2;
    required string value     = 3;
}

message KvPairs {
    repeated KvPair kvPair = 1;
}
